Fixed nav alignment and heading sizes on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -131,8 +131,8 @@ a {
  
 h2 {
   font-family: 'Open Sans', sans-serif;
-  font-size: 3rem;
-  line-height: 3rem;
+  font-size: 2rem;
+  line-height: 2rem;
 }
  
 h3, 
@@ -204,6 +204,7 @@ address {
     justify-content: space-around;
     width: 100%;
     text-transform: uppercase;
+    padding-inline-start: 0px;
   }
 
   header figure {
